fix string truncate on width in group history element

--- a/src/components/RecentOperationsCards/RecentOperationsCards.module.css
+++ b/src/components/RecentOperationsCards/RecentOperationsCards.module.css
@@ -32,13 +32,16 @@
 .memberInfo{
     display: flex;
     flex-direction: column;
+
+    flex: 1;
+    min-width: 0;
 }
 .time{
     composes: mediumItemTitle from "@styles/style.css";
-    /* white-space: nowrap;
-    text-overflow: ellipsis;
+
+    white-space: nowrap;
     overflow: hidden;
-    flex: 1; */
+    text-overflow: ellipsis;
 }
 
 .amount{
@@ -52,12 +55,9 @@
     display: flex;
     align-items: center;
     gap: 10px;
-    max-width: 150px;
 
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
     flex: 1;
+    min-width: 0;
 }
 
 .icon {
@@ -80,11 +80,10 @@
     composes: mediumItemTitle from '@styles/style.css';
     font-weight: 600;
     color: var(--main-text);
-    /* white-space: nowrap; */
-    /* max-width: 100px; */
-    /* text-overflow: ellipsis;
+
+    white-space: nowrap;
     overflow: hidden;
-    flex: 1; */
+    text-overflow: ellipsis;
 }
 
 .category {
